force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/KimbleOne__RevenueAdjustmentItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Revenue Adjustment Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Revenue Adjustment Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>