force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Items</relationshipLabel>
    <relationshipName>RevenueAdjustmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>