force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__AdjustmentInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AdjustmentInternalRevenue__c</fullName>
    <label>Adjustment Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>