force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__AdjustmentRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AdjustmentRevenue__c</fullName>
    <label>Adjustment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>