force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Items</relationshipLabel>
    <relationshipName>RevenueAdjustmentItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>