force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__IntInvCcyAdjustmentInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyAdjustmentInternalRevenue__c</fullName>
    <label>IntInvCcy Adjustment Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>