force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__InvoicingCurrencyAdjustmentRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyAdjustmentRevenue__c</fullName>
    <label>Invoicing Currency Adjustment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>