force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__IsIntercompany__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsIntercompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Intercompany</label>
    <type>Checkbox</type>
</CustomField>