force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__RevenueAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueAdjustment__c</fullName>
    <label>Revenue Adjustment</label>
    <referenceTo>KimbleOne__RevenueAdjustment__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Items</relationshipLabel>
    <relationshipName>RevenueAdjustmentItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>