force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/fields/KimbleOne__TimeEntry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>KimbleOne__TimeEntry__c</referenceTo>
    <relationshipLabel>Revenue Adjustment Items</relationshipLabel>
    <relationshipName>RevenueAdjustmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>