force-app/main/default/objects/KimbleOne__RevenueAdjustmentItem__c/validationRules/KimbleOne__ForecastingPeriodBusinessUnitGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ForecastingPeriodBusinessUnitGroup</fullName>
    <active>true</active>
    <description>Forecasting Period on Revenue Adjustment Item has same Business Unit Group context as the Delivery Element</description>
    <errorConditionFormula>NOT( ISBLANK( KimbleOne__ForecastingTimePeriod__c ) )  &amp;&amp; KimbleOne__ForecastingTimePeriod__r.KimbleOne__BusinessUnitGroup__c &lt;&gt;  KimbleOne__RevenueAdjustment__r.KimbleOne__DeliveryElement__r.KimbleOne__BusinessUnitGroup__c</errorConditionFormula>
    <errorMessage>Revenue Adjustment Item Forecasting Period has invalid Business Unit Group context</errorMessage>
</ValidationRule>